--- a/css/styles.css
+++ b/css/styles.css
@@ -4,12 +4,17 @@ header {
   height: 6em;
   background-position: center;
   color: white;
-  padding-bottom: 1em;
-  margin: 0 -5em 5em; 
+  padding-bottom: 1em;  
+  width: 100%;
 }
 
+html {
+  background-color: #ffdf80;  
+}
 body {
-  background-color: #ffdf80;
+  background-color: white;
+  width: 60rem;
+  margin: 0 auto 5rem;
 }
 
 ::-webkit-input-placeholder {
@@ -34,19 +39,12 @@ h1 {
 }
 
 .main {
-  padding: 0 5rem;
-  height: 100vh;
-  width: 50rem;
-  background-color: white;
-  margin: 0 auto;
-}
-
-.main-body {
   font-family: "Source Sans Pro", serif;
   font-size: 2rem;
   width: 100%;
   margin: 1rem auto 0 auto;
   width: 20rem;
+  padding: 4rem 0;
 }
 
 .new-item {
